<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_main1"
    android:orientation="vertical"
    tools:context="kmitl.natcha58070069.com.libreria.activity.AddDetail">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main1"
        android:orientation="vertical"
        android:onClick="hideKeyboard"
        tools:context="kmitl.natcha58070069.com.libreria.activity.AddDetail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1">-->

                    <!--<ImageView-->
                        <!--android:id="@+id/adBack"-->
                        <!--android:layout_width="40dp"-->
                        <!--android:layout_height="40dp"-->
                        <!--android:layout_gravity="left"-->
                        <!--android:onClick="onBackToMain"-->
                        <!--android:padding="5dp"-->
                        <!--app:srcCompat="@drawable/ad_back" />-->
                <!--</LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/bookmark1" />
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Libreria Name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="Candide, Bookmoby, Happening shop"
                android:inputType="text" />

            <com.wafflecopter.charcounttextview.CharCountTextView
                android:id="@+id/tvNameCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editComment"
                android:layout_marginRight="10dp"
                android:gravity="right"
                app:maxCharacters="50" />

            <TextView
                android:id="@+id/textComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Comment"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:gravity="top|left"
                android:hint="comment abount this Libreria; mood, value, ect."
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="10"
                android:minLines="1"
                android:scrollbars="vertical" />

            <com.wafflecopter.charcounttextview.CharCountTextView
                android:id="@+id/tvTextCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editComment"
                android:layout_marginRight="10dp"
                android:gravity="right"
                app:maxCharacters="280" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:onClick="onAddLocatBtn"
                android:text="Place of Libreria"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvLatLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:onClick="onAddLocatBtn"
                android:text="Latitude/Longitude"
                android:textSize="16dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/laySave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:gravity="center_horizontal"
                android:onClick="onSaveBtn">

                <ImageView
                    android:id="@+id/adSave"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:onClick="onSaveBtn"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ma_add1" />

                <TextView
                    android:id="@+id/adTexSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onSaveBtn"
                    android:text="SAVE"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layAdLocat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:gravity="center_horizontal"
                android:onClick="onAddLocatBtn"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/maFind"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="left"
                    android:onClick="onAddLocatBtn"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ad_pin" />

                <TextView
                    android:id="@+id/maTextFind"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:onClick="onAddLocatBtn"
                    android:padding="5dp"
                    android:text="Add Location"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/cardview_shadow_start_color"
                android:gravity="center_horizontal"
                android:onClick="onDeleteBtn"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/adDelete"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:onClick="onDeleteBtn"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ad_delete" />

                <TextView
                    android:id="@+id/adTextDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:onClick="onDeleteBtn"
                    android:text="DELETE"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
