<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main1"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context="kmitl.natcha58070069.com.libreria.activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="#4c3223" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:text="LIBRERIA"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lib_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:padding="5dp" />

    <LinearLayout
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/layAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp"
            android:onClick="onAddBtn"
            android:background="@color/cardview_shadow_start_color"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/maAdd"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:onClick="onAddBtn"
                app:srcCompat="@drawable/ma_add1" />

            <TextView
                android:id="@+id/maTexAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onAddBtn"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:text="ADD" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layFind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:onClick="onFindBtn"
            android:background="@color/cardview_shadow_start_color"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/maFind"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:onClick="onFindBtn"
                app:srcCompat="@drawable/near" />

            <TextView
                android:id="@+id/maTextFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:textSize="16dp"
                android:onClick="onFindBtn"
                android:text="FIND Nearby" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:onClick="onLogoutBtn"
            android:background="@color/cardview_shadow_start_color"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/maLogout"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:onClick="onLogoutBtn"
                app:srcCompat="@drawable/ma_logout" />

            <TextView
                android:id="@+id/maTextLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:onClick="onLogoutBtn"
                android:text="LOG OUT" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
